Revision history for {{$dist->name}}

{{$NEXT}}

0.002206  2013-03-09 12:50:57 CST6CDT
  - Fix embarrassing broken charity link

0.002205  2013-02-19 15:26:53 CST6CDT
  - Fix spurious warning caused by serializing $dbh (Peter Rabbitson)

0.002204  2013-01-09 20:34:56 CST6CDT
  - Add semicolon to generated SQL for "correctness"

0.002203  2012-11-17 16:38:24 CST6CDT
  - Put MetaYAML back in dist

0.002202  2012-09-02 12:23:07 America/Chicago
  - Fix RT#79301

0.002201  2012-08-18 13:31:00 America/Chicago
  - Fix RT#76323

0.002200  2012-08-02 20:48:52 America/Chicago
  - Added helpful logging for the schema_from_schema_loader ScriptHelper
  - Added much more helpful error for "Can't find source for..." error in
    migration scripts, based on code from DBIx::Class::Migration
  - Test suite now is fully parallelizable
  - Switch ::ScriptHelpers to Sub::Exporter::Progressive
  - Switch from Test::Exception to Test::Fatal

0.002115  2012-07-10 13:36:35 America/Chicago
  - Make tests use actual temp files to make certain systems stop failing tests
  - Remove dep on File::Touch

0.002114  2012-05-07 08:05:20 America/Chicago
  - Correctly set the version deployed to the version requested on install
    instead of just the current schema version

0.002113  2012-05-05 23:09:33 America/Chicago
  - Remove isa check on schema attributes so that you may pass the schema
    class instead of the schema object

0.002112  2012-04-03 21:11:19 America/Chicago
  - Handle errors in Perl Scripts better
  - Stop supporting FindBin by localizing $0, just use Dir::Self if you
    need that

0.002111  2012-03-29 20:09:45 America/Chicago
  - Improve docs by linking from implementations to their roles

0.002110  2012-03-14 21:22:36 America/Chicago
  - Use ->count instead of ->next to check if version storage is deployed
    (->next caused issues on MSSQL due to length of DDL)
  - Fix a couple stupid documentation issues (Phillip Smith)

0.002100  2012-03-03 17:09:21 CST6CDT