@@ -24,10 +24,11 @@ bugtracker.web    = https://github.com/frioux/DBIx-Class-DeploymentHandler/issue
 parent                      = 0.225
 autodie                     = 0
 namespace::autoclean        = 0
-Log::Contextual             = 0.004200
+Log::Contextual             = 0.005005
 Path::Class                 = 0.26
 DBIx::Class                 = 0.08121
 Moose                       = 1.0
+Moo                         = 1.003000
 MooseX::Role::Parameterized = 0.18
 Try::Tiny                   = 0
 SQL::Translator             = 0.11005
